Add source object library to project

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,17 @@
-add_executable(project-cpp)
+add_library(project-cpp-core OBJECT)
+add_library(project-cpp::core ALIAS project-cpp-core)
 
-target_include_directories(project-cpp
+target_sources(project-cpp-core PRIVATE
+  foo.h
+)
+
+target_include_directories(project-cpp-core
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
 )
+
+add_executable(project-cpp)
 
 target_sources(project-cpp PRIVATE
   main.cpp
@@ -13,4 +20,5 @@ target_sources(project-cpp PRIVATE
 # Link library dependencies
 target_link_libraries(project-cpp PRIVATE
   compiler_flags
+  project-cpp-core
 )
